syntax = "proto3";
package freym.crud.management;
import "crud/management/migration.proto";
  
service Service {
	rpc DeploySchema(DeploySchemaRequest) returns (DeploySchemaResponse);
	rpc ConfirmSchema(ConfirmSchemaRequest) returns (ConfirmSchemaResponse);
	rpc RollbackSchema(RollbackSchemaRequest) returns (RollbackSchemaResponse);
	rpc GetSchemaDeployment(GetSchemaDeploymentRequest) returns (GetSchemaDeploymentResponse);
}
